Thu May 29 21:10:47 2003  Joern Thyssen  <jth@gnubg.org>

	Implement Sho Sengoku Equity Temperature Map
	(suggested by Yoshito Takeuchi)

	* gtktempmap.c, Makefile.am: new file
	* gnubg.c: new command "show temperaturemap"
	* show.c (CommandShowTemperatureMap): new function.
	* gtkboard.c (DrawDie): declare function extern.
	* gtkgame.c: new menu entry.

Thu May 29 13:28:46 2003  Joern Thyssen  <jth@gnubg.org>

	* external.c (CommandExternal): bug fixes + resignations.
	* drawboard.c (ParseFIBSBoard): let negative values of "doubled"
	represent resignations.
	(contributed by Rod Roark)

Thu May 29 13:11:38 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (outputl, outputerrv): add fflush.

Thu May 29 12:30:33 2003  Joern Thyssen  <jth@gnubg.org>

	New toolbar button for changing direction of play.

	* gtkboard.c (board_init): draw new button.
	* gtkboard.c (toggle_clockwise): new function.
	* gtkboard.c (toggle_button_from_images): new function.	

	* gtkboard.c (game_set, board_set): move invalidation of arrow area 
	into board_set to avoid gtk warning.

Thu May 29 10:47:39 2003  Joern Thyssen  <jth@gnubg.org>

	Move position calculating routines to new file.

	* boardpos.c, Makefile.am: new file.
	* gtkboard.c, export.c: call new position calculating routines.	

Wed May 28 15:38:58 2003  Holger Bochnig  <hbgg@gmx.net>

	* gtkgame.c (ReportBug): change WWW address to report page

Tue May 27 18:04:16 2003  Holger Bochnig  <hbgg@gmx.net>

        * gtkboard.c (board_quick_edit, board_pointer): clicking on dice roll area
          in edit mode also sets who's on turn

Sat May 24 22:10:53 2003  Holger Bochnig  <hbgg@gmx.net>

        * configure.in, Makefile.am, m4/Makefile.am: add autoconf stuff for LibArt

Sat May 24 10:17:25 2003  Holger Bochnig  <hbgg@gmx.net>

        * dice.c, gnubg.c, gtkprefs.c, i18n.h, makehyper.c, makeweights.c, matchequity.c,
          play.c, set.c, show.c, sound.c, sound.h: changed some #ifdef to #if to follow
          config.h better
